--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,6 @@
 @import url("fontawesome-all.min.css");
 @import url("https://fonts.googleapis.com/css?family=Oleo+Script:400|Open+Sans:300,300italic,600,600italic,800");
+@import url("colores.css");
 
 /*
 	Verti by HTML5 UP
@@ -122,7 +123,7 @@ input, select, textarea {
 	}
 
 	a {
-		color: #0090c5;
+		color: var(--color-primary);
 		text-decoration: underline;
 	}
 
@@ -1634,7 +1635,7 @@ input, select, textarea {
 		-webkit-appearance: none;
 		position: relative;
 		display: inline-block;
-		background: #0090c5;
+		background: var(--color-primary);
 		color: #fff;
 		text-decoration: none;
 		border-radius: 6px;
@@ -1661,7 +1662,7 @@ input, select, textarea {
 		input[type="reset"]:hover,
 		button:hover,
 		.button:hover {
-			background: #10a0d5;
+			background: var(--color-primary);
 		}
 
 		input[type="button"]:active,
@@ -1669,7 +1670,7 @@ input, select, textarea {
 		input[type="reset"]:active,
 		button:active,
 		.button:active {
-			background: #20b0e5;
+			background: var(--color-primary);
 		}
 
 		input[type="button"].alt,
