--- a/assets/css/colores.css
+++ b/assets/css/colores.css
@@ -3,6 +3,7 @@
     --color-secondary: #01A1DD;
     --color-text: #000000;
     --color-accent: #01A1DD;
+    --color-background: #fff;
 }
 
 .aux {
