--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -95,13 +95,13 @@ input, select, textarea {
 		background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0)), url("images/bg01.png");
 		background-image: -ms-linear-gradient(top, rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0)), url("images/bg01.png");
 		background-image: linear-gradient(top, rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0)), url("images/bg01.png");
-		background-color: #f7f7f7;
+		background-color: var(--color-background);
 		background-position: top left, top left;
 		background-repeat: repeat-x, repeat;
 		background-size: 100% 30em, auto;
 		font-family: 'Open Sans', sans-serif;
 		font-size: 13pt;
-		color: #696969;
+		color: var(--color-text);
 		font-weight: 300;
 		line-height: 2.25em;
 	}
@@ -120,7 +120,7 @@ input, select, textarea {
 	input, select, textarea {
 		font-family: 'Open Sans', sans-serif;
 		font-size: 13pt;
-		color: #696969;
+		color: var(--color-text);
 		font-weight: 300;
 		line-height: 2.25em;
 	}
@@ -135,7 +135,7 @@ input, select, textarea {
 		}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #444;
+		color: var(--color-text);
 		font-weight: 800;
 	}
 
@@ -158,7 +158,7 @@ input, select, textarea {
 
 	b, strong {
 		font-weight: 600;
-		color: #444;
+		color: var(--color-text);
 	}
 
 	i, em {
@@ -1495,7 +1495,7 @@ input, select, textarea {
 		font-weight: 800;
 		margin: 0 0 1em 0;
 		font-size: 0.8em;
-		color: #444;
+		color: var(--color-text);
 	}
 
 	form input[type="text"],
@@ -1683,7 +1683,7 @@ input, select, textarea {
 		.button.alt {
 			background: #f1f1f1;
 			background: rgba(0, 0, 0, 0.05);
-			color: #444;
+			color: var(--color-text);
 		}
 
 			input[type="button"].alt:hover,
@@ -1942,7 +1942,7 @@ input, select, textarea {
 	}
 
 		#logo h1 {
-			background: #ff4486;
+			background: var(--color-primary);
 			color: #fff;
 			border-radius: 6px;
 			font-family: 'Oleo Script', serif;
@@ -1990,7 +1990,7 @@ input, select, textarea {
 					transition: background-color .25s ease-in-out;
 					font-weight: 800;
 					letter-spacing: 0.025em;
-					color: #696969;
+					color: var(--color-text);
 					text-decoration: none;
 					border-radius: 6px;
 					padding: 0.5em 1em 0.5em 1em;
@@ -2005,18 +2005,18 @@ input, select, textarea {
 				}
 
 				#nav ul li.active a, #nav ul li.active span {
-					background: #fff;
+					background: var(--color-primary);
 				}
 
 				#nav ul li.current a {
-					background: #444;
-					color: #fff;
+					background: var(--color-primary);
+					color: var(--color-background);
 				}
 
 	.dropotron {
 		background: #fff;
 		letter-spacing: 0.025em;
-		color: #696969;
+		color: var(--color-text);
 		text-decoration: none;
 		border-radius: 6px;
 		padding: 0.75em 0;
@@ -2423,7 +2423,7 @@ input, select, textarea {
 					height: 54px;
 					line-height: 54px;
 					border-top: solid 1px #e8e8e8;
-					color: #696969;
+					color: var(--color-text);
 				}
 
 					#navPanel .link:first-child {
@@ -2456,7 +2456,7 @@ input, select, textarea {
 				}
 
 				#navPanel .depth-0 {
-					color: #444;
+					color: var(--color-text);
 					font-weight: 800;
 				}
 
