--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1912,7 +1912,11 @@ input, select, textarea {
 /* Wrappers */
 
 	#header-wrapper {
-		padding: 4.5em 0 3em 0;
+		padding: 2em 1em 2em 1em;
+		position: fixed;			  /*LUCHO*/
+		left: 0;					  /*LUCHO*/	
+		right: 0;                     /*LUCHO*/
+		top: 0;			
 	}
 
 	#features-wrapper {
@@ -1924,7 +1928,7 @@ input, select, textarea {
 		margin: 5px;				/*EDITADO ABRIL-LUCHO*/	
 		background: #fff;
 		box-shadow: 0px 3px 0px 0px rgba(0, 0, 0, 0.05);
-		padding: 5em 0 5em 0;
+		padding: 10em 0 5em 0;		/*LUCHO*/
 		display:flex;				/*EDITADO ABRIL-LUCHO*/
 		justify-content: center;	/*EDITADO ABRIL-LUCHO*/	
 	}
