--- a/assets/css/productos.css
+++ b/assets/css/productos.css
@@ -5,8 +5,10 @@
     justify-items: center;
     display:grid;
     grid-template-columns: 1fr 3fr;
+    gap: 1em;
 }
 
 .products {
-    border: solid 1px violet;
+    padding: 1em;
+    text-align: justify;
 }
