--- a/base/template/index.html
+++ b/base/template/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload homepage">
-		<div id="page-wrapper">
+		<div id="page-wrapper" class="border-blue">
 
 			<!-- Header -->
 				<div id="header-wrapper">
@@ -126,7 +126,7 @@
 				</div>
 
 			<!-- Main -->
-				<div id="main-wrapper">
+				<div id="main-wrapper" class="border-red">
 					<div class="container">
 						<div class="row gtr-200">
 							<div class="col-4 col-12-medium">
