--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2,7 +2,10 @@ img {
     width: 100%;
 }
 
+#main-wrapper {
+    padding: 3em 0 3em 0; /*LUCHO*/
+}
+
 #banner-wrapper {
-    padding-top: 8em;
-    padding-bottom: 0;
+    padding-top: 8em;   /*LUCHO*/    
 }
