--- a/assets/css/productos.css
+++ b/assets/css/productos.css
@@ -1,14 +1,14 @@
 .products-container {
-    border: solid 1px orangered;
+    /* border: solid 1px orangered; */
     padding: 1em;
-    width: 80%;
-    justify-items: center;
+    align-self: center; /*LUCHO*/
+    width: 80%;    
     display:grid;
     grid-template-columns: 1fr 3fr;
-    gap: 1em;
+    gap: 0.5em;
 }
 
 .products {
-    padding: 1em;
-    text-align: justify;
+    padding: 0.5em;         /*LUCHO*/
+    text-align: justify;    /*LUCHO*/
 }
